@@ -252,7 +252,7 @@ OLESTATUS WINAPI OleUpdate(LPOLEOBJECT);
 OLESTATUS WINAPI OleReconnect(LPOLEOBJECT);
 OLESTATUS WINAPI OleGetLinkUpdateOptions(LPOLEOBJECT,OLEOPT_UPDATE*);
 OLESTATUS WINAPI OleSetLinkUpdateOptions(LPOLEOBJECT,OLEOPT_UPDATE);
-void *WINAPI OleQueryProtocol(LPOLEOBJECT,LPCSTR);
+WINAPI void *OleQueryProtocol(LPOLEOBJECT,LPCSTR);
 OLESTATUS WINAPI OleQueryReleaseStatus(LPOLEOBJECT);
 OLESTATUS WINAPI OleQueryReleaseError(LPOLEOBJECT);
 OLE_RELEASE_METHOD WINAPI OleQueryReleaseMethod(LPOLEOBJECT);
