@@ -430,7 +430,7 @@ int PASCAL getpeername(SOCKET,struct sockaddr*,int*);
 int PASCAL getsockname(SOCKET,struct sockaddr*,int*);
 int PASCAL getsockopt(SOCKET,int,int,char*,int*);
 unsigned long PASCAL inet_addr(const char*);
-char * PASCAL inet_ntoa(struct in_addr);
+PASCAL char *inet_ntoa(struct in_addr);
 int PASCAL listen(SOCKET,int);
 int PASCAL recv(SOCKET,char*,int,int);
 int PASCAL recvfrom(SOCKET,char*,int,int,struct sockaddr*,int*);
@@ -439,12 +439,12 @@ int PASCAL sendto(SOCKET,const char*,int,int,const struct sockaddr*,int);
 int PASCAL setsockopt(SOCKET,int,int,const char*,int);
 int PASCAL shutdown(SOCKET,int);
 SOCKET PASCAL socket(int,int,int);
-struct hostent* PASCAL gethostbyaddr(const char*,int,int);
-struct hostent* PASCAL gethostbyname(const char*);
-struct servent* PASCAL getservbyport(int,const char*);
-struct servent* PASCAL getservbyname(const char*,const char*);
-struct protoent* PASCAL getprotobynumber(int);
-struct protoent* PASCAL getprotobyname(const char*);
+PASCAL struct hostent *gethostbyaddr(const char*,int,int);
+PASCAL struct hostent *gethostbyname(const char*);
+PASCAL struct servent *getservbyport(int,const char*);
+PASCAL struct servent *getservbyname(const char*,const char*);
+PASCAL struct protoent *getprotobynumber(int);
+PASCAL struct protoent *getprotobyname(const char*);
 int PASCAL WSAStartup(WORD,LPWSADATA);
 int PASCAL WSACleanup(void);
 void PASCAL WSASetLastError(int);
