@@ -1,3 +1,9 @@
+2000-03-30  Mumit Khan  <khan@xraylith.wisc.edu>
+
+	* include/ole.h: Workaround for C++ parser bug.
+	* include/rpcdcep.h: Likewise.
+	* include/winsock.h: Likewise.
+
 Sun Mar 26 13:41:47 2000  Christopher Faylor <cgf@cygnus.com>
 
 	* include/winnt.h: Eliminate duplicate PCONTEXT and LPCONTEXT typedefs.
